# sporty_backend

./: .env  clear_docker.sh  docker-compose.yml  start_server.sh  stop_server.sh
api/: Cargo.toml
api/src/: handler.rs  main.rs  model.rs  route.rs  schema.rs
migrations/: 20240809192103_init.down.sql  20240809192103_init.up.sql
